# TCFS

./: .gitattributes  .gitignore  Doxyfile  Makefile  README.md  build-fs.sh  cppcheck_report.txt
.github/workflows/: cccc.yml  cppcheck.yml  doxygen.yml  jekyll-gh-pages.yml
ServerREST/: config.yaml  go.mod  go.sum  main_test.go  tcfs-daemon.go
ServerREST/MariaDBScripts/: Script.sql
ServerREST/crypt-utils/: key-tools.go
ServerREST/daemonTools/: REST_functions.go
ServerREST/db/: db.go
ServerREST/serverTools/: REST_functions.go
ServerREST/types/: tcfs-user.go
cmake/: FindFuse.cmake
code_analisys/cppcheck/: cppcheck_result.sarif
daemon/: Makefile  dump.rdb  service_generator.sh  tcfs_daemon.c
daemon/daemon_utils/: common.h
doxygen_docs/docbook/: REST__functions_8go.xml  REST__functions_8go_source.xml  annotated.xml  classui_1_1main__window_1_1Window.xml  command__handler_2____init_____8py.xml  command__handler_2____init_____8py_source.xml  common_8h_source.xml  crypt-utils_8c.xml  crypt-utils_8c__incl.md5  crypt-utils_8c_a1899c23a523d11ed1cb5601eabdb023d_icgraph.md5  crypt-utils_8c_a36c2342a7c47b8f41bf628bf473b1c97_icgraph.md5  crypt-utils_8c_a373f8aedbcd8b6ce22fe7bdfeb2961c2_cgraph.md5  crypt-utils_8c_a3b003481e5c188ac1d6f63e09e6f3a34_cgraph.md5  crypt-utils_8h.xml  (+197 more)
kernel-module/: Makefile  tcfs_kmodule.c
module/: CMakeLists.txt  tcfs.c
module/crypt-utils/: CMakeLists.txt  crypt-utils.c  crypt-utils.h
user/: Makefile  main.py  tcfs_helper_tools.c  tcfs_helper_tools.h  user_tcfs.c
userspace-module/: Makefile  config-example.yaml  tcfs.c
(+864 files in other folders)
